Add base speech recognition from .mp3 file

--- a/config/env.example
+++ b/config/env.example
@@ -14,3 +14,7 @@ DB_PASSWORD=
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_NUMBER=
+
+# Google Cloud
+GOOGLE_APPLICATION_CREDENTIALS=
+GS_PROJECT_ID=
